--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 header {
   background: url(../images/background-image.jpg) center / cover;
   height: 60vh;
-  justify-content: center;
+  justify-content: center!important;
   text-align: center;
 }
 
@@ -33,7 +33,7 @@ footer.mdl-mini-footer {
   padding: 0.5rem;
   position: fixed;
   width: 100%;
-z-index: 1;
+  z-index: 1;
 }
 
 footer.mdl-mini-footer > ul {
